shellfirm/tests/snapshots/checks__git-gc_prune.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "git-gc_prune.yaml",
        test: "git gc --prune=now",
        check_detection_ids: [
            "git:gc_prune",
        ],
        test_description: "match garbage collection with prune",
    },
    TestSensitivePatternsResult {
        file_path: "git-gc_prune.yaml",
        test: "git gc --aggressive",
        check_detection_ids: [],
        test_description: "match aggressive garbage collection",
    },
]
