shellfirm/tests/snapshots/checks__git-reset.yaml.snap
---
source: shellfirm/tests/checks.rs
expression: test_file_results
snapshot_kind: text
---
[
    TestSensitivePatternsResult {
        file_path: "git-reset.yaml",
        test: "git reset",
        check_detection_ids: [
            "git:reset",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "git-reset.yaml",
        test: "git    reset",
        check_detection_ids: [
            "git:reset",
        ],
        test_description: "match command",
    },
    TestSensitivePatternsResult {
        file_path: "git-reset.yaml",
        test: "gitt reset",
        check_detection_ids: [],
        test_description: "invalid command",
    },
]
